--- a/package.json
+++ b/package.json
@@ -8,11 +8,29 @@
     "lint": "eslint .",
     "start": "react-native start && npm run build && npm run dev && npm run open",
     "open": "concurrently \"http-server -a localhost -p 1234\" \"open http://localhost:1234/build\"",
-    "test": "jest"
+    "test": "jest",
+    "build": "rm -rf dist/ && webpack --mode=production --config webpack.config.js",
+    "web": "webpack serve --mode=development --config webpack.config.js"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.10.1",
+    "@react-navigation/stack": "^6.4.1",
+    "babel-loader": "^9.1.3",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "^12.0.9",
+    "html-webpack-plugin": "^5.6.0",
+    "production": "^0.0.2",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-native-splash-screen": "^3.3.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -22,9 +40,12 @@
     "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.3",
+    "@types/react-native": "^0.72.8",
+    "@types/react-navigation": "^3.0.8",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-react-native-web": "^0.19.12",
     "concurrently": "^8.2.2",
     "eslint": "^8.19.0",
     "http-server": "^14.1.1",
