--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,6 +6,17 @@ apply plugin: "com.facebook.react"
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
  */
+project.ext.react = [
+    entryFile: "index.js",
+    enableHermes: false  // change this to true if you want to enable Hermes
+]
+
+//apply from: "../../node_modules/react-native/react.gradle"
+
+def enableHermes = project.ext.react.get("enableHermes", false)
+
+
+
 react {
     /* Folders */
     //   The root of your project, i.e. where "package.json" lives. Default is '..'
