--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "babel-loader": "^9.1.3",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^12.0.9",
+    "groovy": "^0.0.1",
     "html-webpack-plugin": "^5.6.0",
     "production": "^0.0.2",
     "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "^0.74.3",
+    "react-native-fonts": "^0.0.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-splash-screen": "^3.3.0",
