--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "react": "18.2.0",
     "react-native": "^0.74.3",
     "react-native-fonts": "^0.0.0",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-navigation-drawer": "^2.7.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
