--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "web": "webpack serve --mode=development --config webpack.config.js"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -28,9 +29,11 @@
     "react-native": "^0.74.3",
     "react-native-fonts": "^0.0.0",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.1.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.93.0",
@@ -48,6 +51,7 @@
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.3.3",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-navigation": "^3.0.8",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
