--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "production": "^0.0.2",
     "react": "18.2.0",
     "react-native": "^0.74.3",
+    "react-native-awesome-slider": "^2.5.3",
     "react-native-fonts": "^0.0.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "^3.14.0",
