--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "react-native-awesome-slider": "^2.5.3",
     "react-native-fonts": "^0.0.0",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-leaflet-view": "^0.1.2",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-webview": "^13.10.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
