--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,6 +127,7 @@ dependencies {
     }
 
     implementation project(':react-native-vector-icons')
-}
+    implementation project(':react-native-splash-screen')
 
+}
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
